# Simplify-SentimentJP

./: .env.example  .gitignore  README.md  pyproject.toml
results/: Result.md  concat_data_results.json  original_data_results.json  simplification_data_results.json
results/simplification_bertscore/: bertscore_output_bertscore_stats.csv  bertscore_output_with_bertscore.csv
src/: __init__.py  compute_bertscore.py  evaluate_simplification.py  load_wrime.py  select_wrime_subset.py  simplify_wrime.py  test_simplify.py  utils.py  view_data.py
src/classify/: __init__.py  config.py  data_utils.py  models.py  train_sentiment.py  train_utils.py
src/evaluate/: __init__.py  config.py  embeddings.py  evaluator.py  metrics.py  plotting.py  resimplify.py
test_simplification/: README.md  custom_prompt_example.txt  test_simplify.py  test_simplify_api.py
