[project]
name = "simplify-sentimentjp"
version = "0.1.0"
description = ""
authors = [
    {name = "AmOs15",email = "amos.game1615@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas>=2.0.0",
    "datasets>=2.0.0",
    "scikit-learn>=1.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
