[project]
name = "simplify-sentimentjp"
version = "0.1.0"
description = ""
authors = [
    {name = "AmOs15",email = "amos.game1615@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas>=2.0.0",
    "datasets>=2.0.0",
    "scikit-learn>=1.0.0",
    "transformers (>=4.41)",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "accelerate>=0.20.0",
    "fugashi (>=1.5.1,<2.0.0)",
    "unidic-lite (>=1.0.8,<2.0.0)",
    "protobuf (>=6.32.1,<7.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "google-genai (>=1.41.0,<2.0.0)",
    "bert-score (>=0.3.13,<0.4.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "evaluate", from = "src" }
]
